Update deps and parent project (#37)
* Update deps and parent project
* Sort class members
* Update project configuration
* Update minimum JDK to 17
* Update README and badges
* Fix PMD/Checkstyle warnings