@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>freelib-maven-plugins</artifactId>
   <packaging>maven-plugin</packaging>
@@ -40,21 +41,17 @@
 
   <properties>
     <!-- Project specific dependencies -->
-    <xom.version>1.3.8</xom.version>
-    <maven.version>3.8.6</maven.version>
-    <oshi.core.version>5.2.4</oshi.core.version>
-    <freelib.utils.version>3.3.0</freelib.utils.version>
-    <maven.plugin.version>3.7.0</maven.plugin.version><!-- 3.6.4 -->
-    <slf4j.simple.logger.version>2.0.0</slf4j.simple.logger.version>
+    <xom.version>1.3.9</xom.version>
+    <maven.version>3.9.7</maven.version>
+    <oshi.core.version>6.6.1</oshi.core.version>
+    <freelib.utils.version>4.0.5</freelib.utils.version>
+    <maven.plugin.version>3.13.1</maven.plugin.version>
+    <slf4j.simple.logger.version>2.0.13</slf4j.simple.logger.version>
 
     <!-- Transitive dependencies made explicit for security reasons -->
-    <shared.utils.version>3.3.3</shared.utils.version>
-    <guava.version>32.0.0-jre</guava.version>
-    <commons.io.version>2.7</commons.io.version>
-    <commons.codec.version>1.13</commons.codec.version>
-    <commons.httpclient.version>4.5.13</commons.httpclient.version>
-    <commons.compress.version>1.26.0</commons.compress.version>
-    <xerces.version>2.12.2</xerces.version>
+    <shared.utils.version>3.4.2</shared.utils.version>
+    <guava.version>33.2.1-jre</guava.version>
+    <commons.io.version>2.16.1</commons.io.version>
 
     <!-- Our Maven mojo dependencies -->
     <roaster.version>2.15.0.Final</roaster.version>
@@ -126,12 +123,16 @@
       <scope>provided</scope>
       <exclusions>
         <exclusion>
-          <groupId>org.apache.maven.doxia</groupId>
-          <artifactId>doxia-site-renderer</artifactId>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-collections</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>commons-collections</groupId>
-          <artifactId>commons-collections</artifactId>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.codehaus.plexus</groupId>
+          <artifactId>plexus-archiver</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -151,43 +152,38 @@
       <artifactId>roaster-jdt</artifactId>
       <version>${roaster.version}</version>
     </dependency>
-
-    <!-- Transitive dependencies made explicit for security reasons -->
-    <dependency>
-      <groupId>org.apache.maven.shared</groupId>
-      <artifactId>maven-shared-utils</artifactId>
-      <version>${shared.utils.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>${guava.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>${commons.codec.version}</version>
-    </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${commons.io.version}</version>
     </dependency>
+
+    <!-- Temporary security fixes -->
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>${commons.httpclient.version}</version>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.2</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-compress</artifactId>
-      <version>${commons.compress.version}</version>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.17.0</version>
     </dependency>
     <dependency>
-      <groupId>xerces</groupId>
-      <artifactId>xercesImpl</artifactId>
-      <version>${xerces.version}</version>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-archiver</artifactId>
+      <version>4.9.2</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.iq80.snappy</groupId>
+          <artifactId>snappy</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.iq80.snappy</groupId>
+      <artifactId>snappy</artifactId>
+      <version>0.5</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -196,12 +192,14 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.maven.plugin-testing</groupId>
       <artifactId>maven-plugin-testing-harness</artifactId>
       <scope>test</scope>
       <version>${test.harness.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-compat</artifactId>
@@ -264,17 +262,27 @@
     </testResources>
     <plugins>
       <plugin>
-        <groupId>info.freelibrary</groupId>
-        <artifactId>freelib-maven-plugins</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+            <execution>
+              <phase>generate-sources</phase>
+              <goals>
+                <goal>add-source</goal>
+              </goals>
+              <configuration>
+                <sources>
+                  <source>src/main/generated</source>
+                </sources>
+              </configuration>
+            </execution>
+        </executions>
       </plugin>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
+        <groupId>info.freelibrary</groupId>
+        <artifactId>freelib-maven-plugins</artifactId>
         <configuration>
-          <generatedSourcesDirectory>src/main/generated</generatedSourcesDirectory>
-          <generatedTestSourcesDirectory>src/test/generated</generatedTestSourcesDirectory>
-          <testExcludes>
-            <testExclude>**/MediaTypeTest.java</testExclude>
-          </testExcludes>
+          <generatedSourcesDirectory>${project.basedir}/src/main/generated</generatedSourcesDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -285,6 +293,7 @@
           <extractors>
             <extractor>java-annotations</extractor>
           </extractors>
+          <goalPrefix>freelib</goalPrefix>
         </configuration>
         <executions>
           <execution>
@@ -292,6 +301,13 @@
             <phase>process-classes</phase>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgument>-proc:full</compilerArgument>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -320,11 +336,39 @@
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>snyk-check</id>
+      <activation>
+        <property>
+          <name>env.SNYK_TOKEN</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.snyk</groupId>
+            <artifactId>snyk-maven-plugin</artifactId>
+            <!-- Configurations have to be overridden in the executions' configuration elements -->
+            <executions>
+              <execution>
+                <id>snyk-test</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <!-- Pulls in standard FreeLibrary Project configuration options -->
   <parent>
     <artifactId>freelib-parent</artifactId>
     <groupId>info.freelibrary</groupId>
-    <version>8.0.0</version>
+    <version>8.0.9</version>
   </parent>
 
 </project>
